--- a/verify-frontend-service.yml
+++ b/verify-frontend-service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: 'hello-node-service'
+  name: 'verify-frontend-service'
 spec:
   type: LoadBalancer
   ports:
-    - port: 8080
+    - port: 50300
   selector:
-    app: 'hello-node'
+    app: 'verify-frontend'
 
