--- a/verify-frontend-service.yml
+++ b/verify-frontend-service.yml
@@ -4,8 +4,10 @@ metadata:
   name: 'verify-frontend-service'
 spec:
   type: LoadBalancer
+  loadBalancerIP: 35.205.185.42
   ports:
-    - port: 50300
+    - port: 80
+      targetPort: 50300
   selector:
     app: 'verify-frontend'
 
